--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
 
+@keyframes pulse {
+  0% {
+    text-shadow: 3px 3px 0px #440044, 0 0 10px #ff00ff;
+  }
+  50% {
+    text-shadow: 3px 3px 0px #440044, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
+  }
+  100% {
+    text-shadow: 3px 3px 0px #440044, 0 0 10px #ff00ff;
+  }
+}
+
+body {
+    margin: 0;
+    overflow: hidden;
+    background: linear-gradient(to bottom, #8e44ad, #341f97);
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    display: block;
+}
+
+#center-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1;
+}
+
+#centered-text {
+    font-size: 5em;
+    font-family: 'Press Start 2P', cursive;
+    background: linear-gradient(45deg, #ff00ff, #8e44ad, #ff00ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: pulse 2s infinite;
+}
+
+#music-player-container {
+    margin-top: 20px; /* Add some space between text and player */
+    width: 300px;
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    display: inline-block; /* To make it centerable within the parent */
+}
+
+#track-info {
+    font-size: 0.8em;
+    margin-bottom: 10px;
+}
+
+#controls-container button {
+    background: none;
+    border: 2px solid #ff00ff;
+    color: #ff00ff;
+    font-family: 'Press Start 2P', cursive;
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #ff00ff;
+}
+
+#controls-container button:hover {
+    background: #ff00ff;
+    color: black;
+}
+
+#progress-bar-container {
+    width: 100%;
+    height: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 2px solid #ff00ff;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+#progress-bar {
+    width: 0;
+    height: 100%;
+    background-color: #ff00ff;
+}
